--- a/src/App.css
+++ b/src/App.css
@@ -11,10 +11,11 @@
 
 #track {
     padding-left: 5%;
+    margin-top: 50px;
 }
 
 
-/* .tooltip{
+.tooltip{
     width: 5%;
     display: block;
 }
@@ -29,6 +30,7 @@
     display: none;
     position: absolute;
     width: fit-content;
+    z-index: 9;
     height: auto;
     padding: 5px;
     border-radius: 5px;
@@ -36,10 +38,10 @@
     font-size: 80%;
 }
 
-Button {
+/* Button {
     position: absolute;
     top: -280px;
-} */
+} */ 
 
 
 @media(max-width: 600px){
