--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,8 @@
 
 #track {
     padding-left: 5%;
-    margin-top: 50px;
+    margin-top: 60px;
+    height: fit-content;
 }
 
 
@@ -37,6 +38,22 @@
     background-color: white;
     font-size: 80%;
 }
+
+#update {
+    display: flex;
+    flex-direction: column;
+    width: fit-content;
+    gap: 20px;
+    margin-top: 10vh;
+    margin-left: 3vw;
+    padding: 20px;
+    box-shadow: 3px 3px 1px 5px #696969;
+}
+
+#update input {
+    text-align: center;
+}
+
 
 /* Button {
     position: absolute;
