--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -35,7 +35,7 @@
     animation-iteration-count: infinite;
     animation-direction: alternate;
     animation-duration: 1.5s;
-    filter: drop-shadow(5px 5px 5px #aaa);
+    filter: drop-shadow(5px 5px 5px #f5f5f5);
 }
 
 @keyframes ani {
